give the project a real name

--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
-<project name="todo" default="compile" basedir=".">
+<project name="mapsplit" default="compile" basedir=".">
 	
     <!-- Name of project and version -->
-    <property name="proj.name"      value="todo"/>
+    <property name="proj.name"      value="mapsplit"/>
     <property name="proj.version"   value="0.0.1"/>
 	
     <!-- Global properties for this build -->
