--- a/build.gradle
+++ b/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile 'org.openstreetmap.osmosis:osmosis-core:0.47'
     compile 'org.openstreetmap.osmosis:osmosis-pbf:0.47'
     compile 'com.google.protobuf:protobuf-java:3.6.1'
+    compile 'commons-cli:commons-cli:1.4'
 }
