Start adding JavaDoc and annotations

--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.google.protobuf:protobuf-java:3.6.1'
     compile 'commons-cli:commons-cli:1.4'
     compile 'org.imintel:mbtiles4j:1.0.6'
+    compile 'org.jetbrains:annotations:15.0'
 }
