Fix for zoom level 16, add optimization pass

--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'commons-cli:commons-cli:1.4'
     compile 'org.imintel:mbtiles4j:1.0.6'
     compile 'org.jetbrains:annotations:15.0'
+    compile 'com.zaxxer:SparseBitSet:1.1'
 }
