--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id "org.sonarqube" version "2.7"
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
@@ -25,6 +29,14 @@ task fatJar(type: Jar) {
     with jar
 }
 fatJar.group = 'build'
+
+sonarqube {
+    properties {
+        property "sonar.sourceEncoding","UTF-8"
+        property "sonar.java.binaries", "build/classes/java/main/"
+        property "sonar.jacoco.reportPaths","build/jacoco/test.exec"
+    }
+}
 
 dependencies {
     compile 'org.openstreetmap.osmosis:osmosis-core:0.47'
