--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: java
 
+
+jdk:
+- oraclejdk8
+
 before_install:
  - chmod +x gradlew
  
-jdk:
-- oraclejdk8
+after_failure:
+  - cat /home/travis/build/simonpoole/mapsplit/build/test-results/test/*.xml
