--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 }
 
 plugins {
-    id "org.sonarqube" version "2.7"
+    id "org.sonarqube" version "3.0"
 }
 
 apply plugin: "com.github.breadmoirai.github-release"
@@ -49,11 +49,18 @@ task fatJar(type: Jar) {
 }
 fatJar.group = 'build'
 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
+
 sonarqube {
     properties {
+        property "sonar.java.source","1.8"
         property "sonar.sourceEncoding","UTF-8"
         property "sonar.java.binaries", "build/classes/java/main/"
-        property "sonar.jacoco.reportPaths","build/jacoco/test.exec"
+        property "sonar.coverage.jacoco.xmlReportPaths","build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
     }
 }
 
