--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,8 @@ apply plugin: 'eclipse'
 version = '0.3.0'
 
 repositories {
-    jcenter()
     mavenCentral()
     maven { url 'http://nexus.onebusaway.org/nexus/content/repositories/public/' }
-    maven { url 'https://dl.bintray.com/content/simonpoole/div' }
-    //    flatDir {
-    //        dirs 'lib'
-    //    }
 }
 
 ext {
@@ -73,7 +68,7 @@ dependencies {
     compile 'org.openstreetmap.osmosis:osmosis-pbf:0.47'
     compile 'com.google.protobuf:protobuf-java:3.7.1'
     compile 'commons-cli:commons-cli:1.4'
-    compile 'org.imintel:mbtiles4j:1.1.0'
+    compile 'ch.poole.geo:mbtiles4j:1.2.0'
     compile 'org.jetbrains:annotations:15.0'
     compile 'com.zaxxer:SparseBitSet:1.1'
     testCompile 'junit:junit:4.12'
