--- a/.github/workflows/javalib.yml
+++ b/.github/workflows/javalib.yml
@@ -23,3 +23,12 @@ jobs:
       run: ./gradlew assemble
     - name: Run unit tests
       run: ./gradlew test
+    - name: Run coverage gen
+      run: ./gradlew jacocoTestReport
+    - name: SonarCloud Scan
+      run: ./gradlew sonarqube -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=simonpoole-github --info
+      env:
+         # Needed to get some information about the pull request, if any
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         # SonarCloud access token should be generated from https://sonarcloud.io/account/security/
+         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
