--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ sonarqube {
         property "sonar.sourceEncoding","UTF-8"
         property "sonar.java.binaries", "build/classes/java/main/"
         property "sonar.coverage.jacoco.xmlReportPaths","build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
+        property "sonar.qualitygate.wait", "true"
     }
 }
 
