Don't run sonar if we don't have a token and save test artifacts

--- a/.github/workflows/javalib.yml
+++ b/.github/workflows/javalib.yml
@@ -13,6 +13,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+       # Needed to get some information about the pull request, if any
+       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       # SonarCloud access token should be generated from https://sonarcloud.io/account/security/
+       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
     steps:
     - uses: actions/checkout@v1
     - name: set up JDK 11
@@ -23,12 +29,15 @@ jobs:
       run: ./gradlew assemble
     - name: Run unit tests
       run: ./gradlew test
+    - name: Upload Test Results
+      if: ${{ always() }}
+      uses: actions/upload-artifact@v2
+      with:
+         name: Test output
+         path: /home/runner/work/mapsplit/mapsplit/build/reports/tests/test/
     - name: Run coverage gen
       run: ./gradlew jacocoTestReport
     - name: SonarCloud Scan
+      # only do this step if we have a token for sonar
+      if: ${{ env.SONAR_TOKEN }}
       run: ./gradlew sonarqube -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=simonpoole-github --info
-      env:
-         # Needed to get some information about the pull request, if any
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         # SonarCloud access token should be generated from https://sonarcloud.io/account/security/
-         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
