Ignore more test data

--- a/test-data/.gitignore
+++ b/test-data/.gitignore
@@ -1,3 +1,11 @@
 /iraq-latest.osm.pbf
 /sachsen-latest.osm.pbf
 /switzerland-latest.osm.pbf
+/austria-latest.osm.pbf
+/austria.msf
+/switzerland-exact.osm.pbf
+/switzerland-padded.osm.pbf
+/test1.msf
+/test.msf
+/turkmenistan-latest.osm.pbf
+/zh.pbf
